<resources>
    <string name="app_name">ABNDP1</string>
    <string name="t1"> An emerging Edtech Startup</string>
    <string name="t2">EduFlick is an EdTech start up. EduFlick exercises it\'s arm in providing assistance and materials for school and undergraduates students.</string>
    <string name="t3">CONTACT US AND START LEARNING</string>
    <string name="t4">+91-7205-4405-06</string>
    <string name="t5">www.eduflick.in</string>
    <string name="t6">KIIT, Shikhar Chandi Rd, Chandaka Industrial Estate, Bajrang Vihar, Patia, Bhubaneswar, Odisha 751024</string>
    <string name="t7">09:00 a.m. to 10:00 p.m.</string>
</resources>

